# Research-Practicum

./: README.md  pyproject.toml
data/: IL400_5.5ms_15deg.RAW8  IL400_5.5ms_15deg_dark.RAW8  IL400_6ms_dark.RAW8  fres400_280ms_15deg.RAW8  fres400_6ms.RAW8  info_test_measurements.csv  test_measurements.csv  water400_107ms.RAW8  water400_107ms_dark.RAW8  water400_2s_15deg.RAW8  water400_2s_15deg_dark.RAW8
data/data_200mu_raw8/: IL200_4.5ms_15deg.RAW8  IL200_5.1ms_0deg.RAW8  IL200_5.1ms_0deg_dark.RAW8  fres200_1.4s_15deg_dark.RAW8  water200_1.6s_15deg.RAW8
data/data_400mu_raw8/: fres400_280ms_15deg_dark.RAW8
data/data_experiment/: bellyfat.csv  experiment_calibration.csv
data_200mu_csv/: 12_measurements_200mu.csv
data_200mu_raw8/: IL200_4.5ms_15deg_dark.RAW8  fres200_1.4s_15deg.RAW8  fres200_5ms_0deg.RAW8  fres200_5ms_0deg_dark.RAW8  water200_1.6s_15deg_dark.RAW8  water200_73ms_0deg.RAW8  water200_73ms_0deg_dark.RAW8
data_400mu_csv/: 12_measurements_400mu.csv
data_400mu_raw8/: IL400_6ms.RAW8
data_csv/: 12_measurements_400mu.csv
data_raw8/: fres400_6ms_dark.RAW8
literature_data/: Hale.csv
src/research_practicum/: analysis.py  data_gathering.py  view.py
test/: data_analysis.py
tests/: analysis.py  data.py  data2.py  data_analysis.py  data_gathering.py  data_gathering2.py  plots.py  test_analysis.py  test_data_gathering.py  test_gui.py  test_interface.py  test_interface.ui  test_plots.py
